Revise README for upgrade to OSRS rev-240
Updated README to reflect the upgrade from rev-228 to rev-240, detailing changes in project structure, cache setup, and content management.